<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutOwnerName"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_owner_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextOwnerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutRepoName"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_repo_name"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutOwnerName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextRepoName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <include
        android:id="@+id/layoutFilter"
        layout="@layout/layout_filters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutRepoName" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButtonSubmitDetails"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:text="@string/action_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutFilter" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButtonCancel"
        android:layout_marginTop="8dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/action_cancel"
        app:layout_constraintEnd_toStartOf="@id/materialButtonSubmitDetails"
        app:layout_constraintTop_toBottomOf="@+id/layoutFilter" />

</androidx.constraintlayout.widget.ConstraintLayout>